feat: decimal quantities, units of measure, and improved test coverage
Main changes:
- Supported decimal quantities (Float) in Prisma schema (backend)
- Added 'unit' of measurement field to RawMaterials (backend/frontend)
- Updated DTO validations to allow decimal numbers and added Swagger docs
- Optimized production logic to handle decimal amounts and units
- Improved accessibility in frontend forms (proper label-input associations)
- Enhanced test coverage for frontend (utils/format) and backend (auth service, jwt guard)
- Verified passing tests for both backend (88 tests) and frontend (134 tests)

--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "db:migrate": "npx prisma migrate dev",
     "db:seed": "npx tsx prisma/seed.ts",
+    "db:clear": "npx tsx prisma/clear.ts",
     "db:reset": "npx prisma migrate reset --force"
   },
   "prisma": {
